--- a/Tic-Tac-Toe/tic_tac_toe.ipynb
+++ b/Tic-Tac-Toe/tic_tac_toe.ipynb
@@ -4,17 +4,126 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import libraries\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn import preprocessing "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test\n"
+      "[[0 0 1 ... 0 1 0]\n",
+      " [0 0 1 ... 0 1 0]\n",
+      " [0 0 1 ... 0 0 1]\n",
+      " ...\n",
+      " [0 1 0 ... 0 0 1]\n",
+      " [0 1 0 ... 0 0 1]\n",
+      " [0 1 0 ... 0 0 1]]\n"
      ]
     }
    ],
    "source": [
-    "print(\"Test\")"
+    "data = pd.read_csv(r\"E:\\learning\\AI1\\Machine Learning A-Z - work\\Project\\Machine-Learning-Projects-With-Python\\Tic-Tac-Toe\\tic-tac-toe_csv.csv\")\n",
+    "#data preprocessing\n",
+    "data_new = pd.get_dummies(data.iloc[:,0:9])\n",
+    "X = data_new.iloc[:, :].values\n",
+    "print(X)\n",
+    "y = data_new.iloc[:, -1].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Splitted Data into Test and Train set\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y , test_size=0.25, random_state = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Applying logistic Regression model\n",
+    "from sklearn.linear_model  import LogisticRegression\n",
+    "LR = LogisticRegression()\n",
+    "LR = LR.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[141   0]\n",
+      " [  0  99]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import confusion_matrix, accuracy_score\n",
+    "y_pred = LR.predict(X_test)\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "print(cm)\n",
+    "accuracy_score(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "[[141   0]\n",
+      " [  0  99]]\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00       141\n",
+      "           1       1.00      1.00      1.00        99\n",
+      "\n",
+      "    accuracy                           1.00       240\n",
+      "   macro avg       1.00      1.00      1.00       240\n",
+      "weighted avg       1.00      1.00      1.00       240\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import metrics\n",
+    "print(metrics.accuracy_score(y_test, y_pred))\n",
+    "print(metrics.confusion_matrix(y_test, y_pred))\n",
+    "print(metrics.classification_report(y_test, y_pred))"
    ]
   },
   {
